# lhk_core

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  LuaHotKey.sln  LuaHotKey.vcxproj  lhk_core-0.1-1.rockspec  lhk_core-scm-1.rockspec  luahotkey-0.1-1.rockspec  luahotkey-1.0-1.rockspec
Tests/: CMakeLists.txt  Tests.vcxproj  test.cpp
Tests/x64/Debug/: Tests.exe.recipe  Tests.vcxproj.FileListAbsolute.txt
Tests/x64/Debug/Tests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Tests.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lua/: test.lua
notes/: problems.md
src/: AttributeTree.c  AttributeTree.cpp  AttributeTree.h  Definitions.h  Dll.cpp  Dll.h  Flags.cpp  Flags.h  KeyStroke.c  KeyStroke.cpp  KeyStroke.h  KeyStrokeLua.cpp  KeyStrokeLua.h  Keyboard.cpp  Keyboard.h  KeyboardHook.cpp  KeyboardHook.h  KeyboardHookLua.cpp  KeyboardHookLua.h  KeyboardStroke.cpp  KeyboardStroke.h  KeyboardSubHook.cpp  KeyboardSubHook.h  LayerLua.cpp  LayerLua.h  Layers.cpp  Layers.h  LuaEnvironment.cpp  LuaEnvironment.h  LuaHeader.h  Modifiers.cpp  Modifiers.h  Source.cpp  Stroke.cpp  Stroke.h
